# rag-agent-framework

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  ollama.Dockerfile  pyproject.toml  test_qdrant_connection.py
config/: config.yaml
ollama_custom/: Dockerfile  entrypoint.sh
qdrant_storage/: raft_state.json
qdrant_storage/collections/my_rag_collection/0/: newest_clocks.json
qdrant_storage/collections/star_charts/0/: newest_clocks.json
qdrant_storage/collections/test_connection/: config.json
qdrant_storage/collections/test_connection/0/: replica_state.json
qdrant_storage/collections/user_memory_cli_user_alex/0/: newest_clocks.json
scripts/: chat.py  ingest.py  init_collection.py  query.py  run_crew.py
services/cad-parser/: Dockerfile
services/cad-parser/app/: cad_parser.py  main.py  runner.py
services/cad-parser/test/: Part2.STEP  test_parser.py
services/pdf-parser/: Dockerfile  requirements.txt
services/pdf-parser/app/: main.py  pdf_parser.py
src/rag_agent_framework/agents/: crew.py  research_agents.py  tasks.py
src/rag_agent_framework/api/: server.py
src/rag_agent_framework/core/: config.py
src/rag_agent_framework/graph/: schema.py
src/rag_agent_framework/ingestion/: cad_parser.py  document_parser.py
src/rag_agent_framework/rag/: data_loader.py  memory.py  rag_chain.py  text_splitter.py  vector_store.py
src/rag_agent_framework/tools/: rag_tool.py
src/rag_agent_framework/utils/: db_connections.py  parser_client.py  path_fix.py
tests/: test_api.py
ui/: app.py
(+1384 files in other folders)
